--- a/.github/workflows/build-and-push-on-main.yml
+++ b/.github/workflows/build-and-push-on-main.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
-    environment: docker-deploy
+    environment: general
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
