--- a/.github/workflows/test-on-pr.yml
+++ b/.github/workflows/test-on-pr.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    environment: codecov
+    environment: general
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -35,3 +35,4 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: ./jacoco/jacoco.xml
+          
