--- a/.github/workflows/build-and-push-on-main.yml
+++ b/.github/workflows/build-and-push-on-main.yml
@@ -1,5 +1,3 @@
-# .github/workflows/build-and-push-on-main.yml
-
 name: Build and Push Docker Image on Main
 
 on:
@@ -23,9 +21,27 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Read and bump version
+        id: versioning
+        run: |
+          version=$(cat VERSION)
+          new_version=$((version + 1))
+          echo "VERSION=v$new_version" >> $GITHUB_ENV
+          echo $new_version > VERSION
+
+      - name: Commit new VERSION
+        run: |
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          git add VERSION
+          git commit -m "ci: bump version to v${{ env.VERSION }}"
+          git push
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          tags: maximorero14/k8_auth:latest
+          tags: |
+            maximorero14/k8_auth:latest
+            maximorero14/k8_auth:v${{ env.VERSION }}
