--- a/.github/workflows/build-and-push-on-main.yml
+++ b/.github/workflows/build-and-push-on-main.yml
@@ -35,7 +35,7 @@ jobs:
           git config user.email "actions@github.com"
           git add VERSION
           git commit -m "ci: bump version to v${{ env.VERSION }}"
-          git push
+          git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }} HEAD:main
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
