--- a/.github/workflows/build-and-push-on-main.yml
+++ b/.github/workflows/build-and-push-on-main.yml
@@ -11,33 +11,33 @@ jobs:
     environment: general
 
     steps:
-    # 1) Checkout SOLO lectura (sin credenciales de push)
-    - name: Checkout code
+    - name: Checkout code (read-only)
       uses: actions/checkout@v3
       with:
-        persist-credentials: false
+        persist-credentials: false      # evita credenciales de push
 
-    # 2) Configurar Buildx
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    # 3) Login a Docker Hub
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    # 4) Definir la versión a partir del número de run
+    # VERSION = número de ejecución → v1, v2, v3...
     - name: Set VERSION env
       run: echo "VERSION=${{ github.run_number }}" >> $GITHUB_ENV
 
-    # 5) Build & push con las dos etiquetas
     - name: Build and push Docker image
       uses: docker/build-push-action@v5
       with:
         context: .
         push: true
+        # si algún día necesitas multi-arch, descomenta:
+        # platform: linux/amd64,linux/arm64
+        build-args: |
+          APP_VERSION=${{ env.VERSION }}
         tags: |
           maximorero14/k8_auth:latest
           maximorero14/k8_auth:v${{ env.VERSION }}
