--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,28 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependencies>
+
+			<!-- Micrometer → OpenTelemetry bridge (métricas) -->
+			<dependency>
+				<groupId>io.micrometer</groupId>
+				<artifactId>micrometer-tracing-bridge-otel</artifactId>
+				<version>1.2.1</version><!-- usa la más reciente -->
+			</dependency>
+
+			<!-- Exportador OTLP (métricas + trazas) -->
+			<dependency>
+				<groupId>io.opentelemetry</groupId>
+				<artifactId>opentelemetry-exporter-otlp</artifactId>
+				<version>1.39.0</version>
+			</dependency>
+
+			<dependency>
+				<groupId>io.micrometer</groupId>
+				<artifactId>micrometer-registry-prometheus</artifactId>
+				<version>1.13.1</version><!-- usa la última estable -->
+			</dependency>
+		</dependencies>
 	</dependencies>
 
 	<build>
