--- a/pom.xml
+++ b/pom.xml
@@ -35,21 +35,29 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<!-- ACTUATOR - REQUERIDO para /actuator/prometheus -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
 		<!-- Micrometer → OpenTelemetry bridge (métricas) -->
 		<dependency>
 			<groupId>io.micrometer</groupId>
 			<artifactId>micrometer-tracing-bridge-otel</artifactId>
-			<version>1.2.1</version><!-- usa la más reciente -->
+			<version>1.2.1</version>
 		</dependency>
 
 		<!-- Exportador OTLP (métricas + trazas) -->
@@ -59,10 +67,11 @@
 			<version>1.39.0</version>
 		</dependency>
 
+		<!-- Prometheus registry -->
 		<dependency>
 			<groupId>io.micrometer</groupId>
 			<artifactId>micrometer-registry-prometheus</artifactId>
-			<version>1.13.1</version><!-- usa la última estable -->
+			<version>1.13.1</version>
 		</dependency>
 	</dependencies>
 
