--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,19 @@
 spring.application.name=k8_auth
 
 
-# Configuración de métricas OTLP
+
 management.otlp.metrics.export.enabled=true
 management.otlp.metrics.export.url=http://otel-collector.monitoring.svc.cluster.local:4318/v1/metrics
 management.otlp.metrics.export.step=15s
 
-# Configuración de recursos
+
 management.otlp.resource-attributes=service.name=k8_auth,environment=dev
 
 # Deshabilitar tracing
 management.tracing.enabled=false
 management.otlp.tracing.export.enabled=false
 
-# Opcional: Habilitar métricas adicionales de Spring Boot
-management.metrics.export.prometheus.enabled=false  # Ya usamos OTLP
-management.endpoints.web.exposure.include=health,info,metrics
+
+management.metrics.export.prometheus.enabled=true
+management.endpoints.web.exposure.include=health,info,metrics,prometheus
 management.endpoint.health.show-details=always
