--- a/pom.xml
+++ b/pom.xml
@@ -60,14 +60,20 @@
 			<version>1.2.1</version>
 		</dependency>
 
-		<!-- Exportador OTLP (métricas + trazas) -->
+
 		<dependency>
 			<groupId>io.opentelemetry</groupId>
 			<artifactId>opentelemetry-exporter-otlp</artifactId>
 			<version>1.39.0</version>
 		</dependency>
 
-		<!-- Prometheus registry -->
+
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-otlp</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>io.micrometer</groupId>
 			<artifactId>micrometer-registry-prometheus</artifactId>
