--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,8 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<optional>true</optional>
+			<version>1.18.32</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
@@ -79,6 +80,11 @@
 			<artifactId>micrometer-registry-prometheus</artifactId>
 			<version>1.13.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.httpcomponents.client5</groupId>
+			<artifactId>httpclient5</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -110,6 +116,8 @@
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
+							<version>1.18.32</version>
+
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
