--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ management.endpoints.web.exposure.include=health,info,metrics,prometheus
 management.endpoint.health.show-details=always
 
 
-logging.level.root=INFO
+logging.level.root=DEBUG
 logging.level.io.micrometer.tracing=DEBUG
 logging.level.io.opentelemetry=DEBUG
 logging.level.org.springframework.web=DEBUG
