--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,10 @@
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.kafka</groupId>
+			<artifactId>kafka-clients</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
