--- a/pom.xml
+++ b/pom.xml
@@ -89,18 +89,14 @@
 		</dependency>
 
 		<dependency>
-			<groupId>io.nats</groupId>
-			<artifactId>jnats</artifactId>
-			<version>2.17.7</version>
-		</dependency>
-		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
 
+	
 		<dependency>
-			<groupId>org.apache.kafka</groupId>
-			<artifactId>kafka-clients</artifactId>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
 		</dependency>
 	</dependencies>
 
