--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,11 @@
 			<version>7.4</version>
 		</dependency>
 
+		<dependency>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-starter-amqp</artifactId>
+    	</dependency>
+
 	</dependencies>
 
 	<build>
